log
Thu Apr 30 06:07:16 PM UTC 2026: 
 treemap.c | 62 +++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 53 insertions(+), 9 deletions(-)
 tests:  1|8
total_score: 0/60
836fe99
Thu Apr 30 06:07:34 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:52:5: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   52 |     return;
      |     ^~~~~~
treemap.c:45:11: note: declared here
   45 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2))
      |           ^~~~~~~~~~~~~
11f4bd7
Thu Apr 30 06:07:46 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
19c9b46
Thu Apr 30 08:20:10 PM UTC 2026: 
 treemap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:61:5: error: unknown type name ‘Treenode’; did you mean ‘TreeNode’?
   61 |     Treenode* current = tree->root;
      |     ^~~~~~~~
      |     TreeNode
treemap.c:61:25: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Wincompatible-pointer-types]
   61 |     Treenode* current = tree->root;
      |                         ^~~~
treemap.c:64:41: error: request for member ‘pair’ in something not a structure or union
   64 |             if(is_equal(tree,key,current->pair->key))
      |                                         ^~
treemap.c:66:31: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
   66 |                 tree->current = current;
      |                               ^
treemap.c:67:31: error: request for member ‘pair’ in something not a structure or union
   67 |                 return current->pair;
      |                               ^~
treemap.c:69:44: error: request for member ‘pair’ in something not a structure or union
   69 |             if(tree->lower_than(key,current->pair->key)) current = current->left;
      |                                            ^~
treemap.c:69:75: error: request for member ‘left’ in something not a structure or union
   69 |             if(tree->lower_than(key,current->pair->key)) current = current->left;
      |                                                                           ^~
treemap.c:70:35: error: request for member ‘right’ in something not a structure or union
   70 |             else current = current->right;
      |                                   ^~
b071ed8
Thu Apr 30 08:21:49 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
23ff1b6
Thu Apr 30 08:48:37 PM UTC 2026: 
 treemap.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  11|6
total_score: 15/60
abeac3f
Thu Apr 30 08:48:46 PM UTC 2026: 
 tests:  11|6
total_score: 15/60
854423d
Thu Apr 30 08:48:51 PM UTC 2026: 
 tests:  11|6
total_score: 15/60
b139249
Thu Apr 30 08:53:28 PM UTC 2026: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/60
e3af579
Thu Apr 30 08:56:17 PM UTC 2026: 
 treemap.c | 16 +++++-----------
 1 file changed, 5 insertions(+), 11 deletions(-)
 tests:  13|5
total_score: 25/60
728cd83
Thu Apr 30 08:56:40 PM UTC 2026: 
 tests:  13|5
total_score: 25/60
dee7605
Thu Apr 30 09:00:13 PM UTC 2026: 
 treemap.c | 14 +++++---------
 1 file changed, 5 insertions(+), 9 deletions(-)
 tests:  15|4
total_score: 25/60
bef6942
Thu Apr 30 10:15:14 PM UTC 2026: 
 treemap.c | 30 ++++++++++++++++++++++--------
 1 file changed, 22 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:148:15: error: variable ‘hijo’ set but not used [-Werror=unused-but-set-variable]
  148 |     TreeNode* hijo;
      |               ^~~~
cc1: all warnings being treated as errors
523230e
Sun May  3 02:53:01 PM UTC 2026: 
 treemap.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:163:36: error: ‘child’ undeclared (first use in this function)
  163 |         else node->parent->right = child;
      |                                    ^~~~~
treemap.c:163:36: note: each undeclared identifier is reported only once for each function it appears in
07cbd0e
Sun May  3 02:53:22 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 31/60
846c411
Sun May  3 03:06:15 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:143:37: error: expected ‘;’ before ‘node’
  143 |             sucesor = sucesor->right
      |                                     ^
      |                                     ;
  144 |         node->pair->key = sucesor->pair->key;
      |         ~~~~                         
723fd2d
Sun May  3 03:06:38 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 31/60
5fa5c32
Sun May  3 03:12:21 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:166:39: error: ‘TreeNode’ has no member named ‘Pair’; did you mean ‘pair’?
  166 |     int* rootkey = (int*) tree->root->Pair->key;
      |                                       ^~~~
      |                                       pair
bb2a752
Sun May  3 03:12:43 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 31/60
8d5847a
Sun May  3 03:13:04 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 31/60
825364c
Sun May  3 03:24:46 PM UTC 2026: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:176:41: error: ‘TreeNode’ has no member named ‘der’
  176 |         int* rootder = (int*) tree->root->der->pair->key;
      |                                         ^~
treemap.c:177:24: error: ‘rootizq’ undeclared (first use in this function)
  177 |         printf("%d\n", rootizq,rootder);
      |                        ^~~~~~~
treemap.c:177:24: note: each undeclared identifier is reported only once for each function it appears in
729b747
